; ModuleID = '/home/carl/AnghaBench/linux/crypto/extr_deflate.c_deflate_sdecompress.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/extr_deflate.c_deflate_sdecompress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_scomp = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.crypto_scomp*, i32*, i32, i32*, i32*, i8*)* @deflate_sdecompress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @deflate_sdecompress(%struct.crypto_scomp* %0, i32* %1, i32 %2, i32* %3, i32* %4, i8* %5) #0 {
  %7 = alloca %struct.crypto_scomp*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  store %struct.crypto_scomp* %0, %struct.crypto_scomp** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  store i8* %5, i8** %12, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = load i32, i32* %9, align 4
  %15 = load i32*, i32** %10, align 8
  %16 = load i32*, i32** %11, align 8
  %17 = load i8*, i8** %12, align 8
  %18 = call i32 @__deflate_decompress(i32* %13, i32 %14, i32* %15, i32* %16, i8* %17)
  ret i32 %18
}

declare dso_local i32 @__deflate_decompress(i32*, i32, i32*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
